--- a/app/src/main/res/layout/content_courses.xml
+++ b/app/src/main/res/layout/content_courses.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SubjectsActivity"
-    tools:showIn="@layout/app_bar_subjects">
+    tools:context=".CoursesActivity"
+    tools:showIn="@layout/app_bar_courses">
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -29,12 +29,26 @@
         android:text="@string/already_one_of_your_subjects"
         android:textColor="#711d1d"
         android:textSize="13sp"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/screen_title"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/no_available_courses"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/no_available_courses"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/screen_title"
@@ -43,7 +57,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text=""
+        android:text="@string/screen_title"
         android:textSize="13sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
