--- a/app/src/main/res/layout/content_exams.xml
+++ b/app/src/main/res/layout/content_exams.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SubjectsActivity"
-    tools:showIn="@layout/app_bar_subjects">
+    tools:context=".ExamsActivity"
+    tools:showIn="@layout/app_bar_exams">
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -17,5 +17,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:context=".ExamsActivity" />
+
+    <TextView
+        android:id="@+id/no_available_exams"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/no_available_exams"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
