--- a/app/src/main/res/layout/content_my_courses.xml
+++ b/app/src/main/res/layout/content_my_courses.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SubjectsActivity"
-    tools:showIn="@layout/app_bar_subjects">
+    tools:context=".MyCoursesActivity"
+    tools:showIn="@layout/app_bar_my_courses">
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
