--- a/app/src/main/res/layout/exam_item_layout.xml
+++ b/app/src/main/res/layout/exam_item_layout.xml
@@ -5,18 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
-    val id:TextView = itemView.findViewById(R.id.id)!!
-    val classroom_code:TextView = itemView.findViewById(R.id.classroom_code)!!
-    val date:TextView = itemView.findViewById(R.id.date)!!
-    val beginning:TextView = itemView.findViewById(R.id.beginning)!!
-    val ending:TextView = itemView.findViewById(R.id.beginning)!!
-    val classroom_campus:TextView = itemView.findViewById(R.id.classroom_campus)!!
-    val button_sign_up:Button = itemView.findViewById(R.id.button_sign_up)!!
-    val parentLayout:ConstraintLayout = itemView.findViewById(R.id.exams_parent_layout)!!
-    val spinner: Spinner = itemView.findViewById(R.id.spinner)
-
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
