--- a/app/src/main/res/menu/activity_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer.xml
@@ -7,15 +7,15 @@
         <item
             android:id="@+id/nav_subjects"
             android:icon="@drawable/ic_menu_subjects"
-            android:title="Oferta Académica" />
+            android:title="@string/nav_subjects" />
         <item
             android:id="@+id/nav_courses"
             android:icon="@drawable/ic_menu_courses"
-            android:title="Mis Inscripciones" />
+            android:title="@string/nav_courses" />
         <item
             android:id="@+id/nav_exam_subjects"
             android:icon="@drawable/ic_menu_exam_subjects"
-            android:title="Oferta Exámenes" />
+            android:title="@string/nav_exam_subjects" />
 
     </group>
 
