--- a/app/src/main/res/layout/my_courses_item_layout.xml
+++ b/app/src/main/res/layout/my_courses_item_layout.xml
@@ -194,7 +194,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:maxLines="2"
-                android:text="@string/status"
+                android:text="@string/state"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
