--- a/app/src/main/res/layout/my_exams_item_layout2.xml
+++ b/app/src/main/res/layout/my_exams_item_layout2.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
 
+
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
@@ -29,13 +30,28 @@
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:maxLines="2"
-                android:text="@string/id"
+                android:text="@string/name"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/examiner" />
+
+            <TextView
+                android:id="@+id/code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:maxLines="2"
+                android:text="@string/code"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toStartOf="@+id/name"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/examiner" />
 
@@ -43,9 +59,9 @@
                 android:id="@+id/examiner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/professor"
                 android:textColor="@android:color/darker_gray"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,9 +74,9 @@
                 android:id="@+id/classroom_code_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/classroom_code_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/date_header"
@@ -73,37 +89,37 @@
                 android:id="@+id/date_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/date"
                 android:textSize="13sp"
+                app:layout_constraintEnd_toStartOf="@+id/beginning_header"
                 app:layout_constraintHorizontal_weight="25"
-                app:layout_constraintTop_toBottomOf="@+id/name"
                 app:layout_constraintStart_toEndOf="@+id/classroom_code_header"
-                app:layout_constraintEnd_toStartOf="@+id/beginning_header" />
+                app:layout_constraintTop_toBottomOf="@+id/name" />
 
             <TextView
                 android:id="@+id/beginning_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/beginning_header"
                 android:textSize="13sp"
+                app:layout_constraintEnd_toStartOf="@+id/ending_header"
                 app:layout_constraintHorizontal_weight="15"
-                app:layout_constraintTop_toBottomOf="@+id/name"
                 app:layout_constraintStart_toEndOf="@+id/date_header"
-                app:layout_constraintEnd_toStartOf="@+id/ending_header" />
+                app:layout_constraintTop_toBottomOf="@+id/name" />
 
             <TextView
                 android:id="@+id/ending_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/ending_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/state_header"
@@ -115,10 +131,10 @@
                 android:id="@+id/state_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="@string/spinner_header"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/state_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_weight="35"
@@ -130,9 +146,9 @@
                 android:id="@+id/classroom_code"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/classroom_code_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/date"
@@ -145,9 +161,9 @@
                 android:id="@+id/date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/date"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/beginning"
@@ -159,9 +175,9 @@
                 android:id="@+id/beginning"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/beginning_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/ending"
@@ -173,63 +189,57 @@
                 android:id="@+id/ending"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/ending"
                 android:textSize="13sp"
-                app:layout_constraintEnd_toStartOf="@+id/spinner"
+                app:layout_constraintEnd_toStartOf="@+id/state"
                 app:layout_constraintHorizontal_weight="15"
                 app:layout_constraintStart_toEndOf="@+id/beginning"
                 app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />
 
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_weight="35"
-                app:layout_constraintStart_toEndOf="@+id/ending"
-                app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />
-
             <Button
-                android:id="@+id/button_sign_up"
+                android:id="@+id/button_drop_out"
                 style="@android:style/Widget.Material.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="@string/button_sign_up"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:text="@string/button_drop_out"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner"
-                app:layout_constraintVertical_bias="1.0"
+                app:layout_constraintTop_toBottomOf="@+id/state"
                 tools:targetApi="m" />
 
             <TextView
                 android:id="@+id/classroom_campus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
                 android:text="@string/classroom_campus"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintStart_toStartOf="parent" />
 
-
+            <TextView
+                android:id="@+id/state"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/state"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="35"
+                app:layout_constraintStart_toEndOf="@+id/ending"
+                app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />
 
 
         </android.support.constraint.ConstraintLayout>
