--- a/app/src/main/res/menu/activity_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer.xml
@@ -16,6 +16,10 @@
             android:id="@+id/nav_exam_subjects"
             android:icon="@drawable/ic_menu_exam_subjects"
             android:title="Oferta Exámenes" />
+        <item
+            android:id="@+id/nav_my_exams"
+            android:icon="@drawable/ic_menu_my_exams"
+            android:title="Mis Inscripciones a Exámenes" />
 
     </group>
 
