#46 Added exam inscription for the student. Also added login persistance

--- a/app/src/main/res/layout/exam_item_layout.xml
+++ b/app/src/main/res/layout/exam_item_layout.xml
@@ -26,32 +26,19 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/id"
+                android:id="@+id/exam_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:maxLines="2"
-                android:text="@string/id"
+                android:text="@string/exam_title"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/examiner" />
-
-            <TextView
-                android:id="@+id/examiner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="@string/professor"
-                android:textColor="@android:color/darker_gray"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
 
 
             <TextView
@@ -63,25 +50,12 @@
                 android:layout_marginEnd="8dp"
                 android:text="@string/classroom_code_header"
                 android:textSize="13sp"
-                app:layout_constraintEnd_toStartOf="@+id/date_header"
+                app:layout_constraintEnd_toStartOf="@+id/beginning_header"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintHorizontal_weight="10"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/id" />
+                app:layout_constraintTop_toBottomOf="@+id/exam_title" />
 
-            <TextView
-                android:id="@+id/date_header"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="@string/date"
-                android:textSize="13sp"
-                app:layout_constraintHorizontal_weight="25"
-                app:layout_constraintTop_toBottomOf="@+id/id"
-                app:layout_constraintStart_toEndOf="@+id/classroom_code_header"
-                app:layout_constraintEnd_toStartOf="@+id/beginning_header" />
 
             <TextView
                 android:id="@+id/beginning_header"
@@ -92,10 +66,10 @@
                 android:layout_marginEnd="8dp"
                 android:text="@string/beginning_header"
                 android:textSize="13sp"
+                app:layout_constraintEnd_toStartOf="@+id/ending_header"
                 app:layout_constraintHorizontal_weight="15"
-                app:layout_constraintTop_toBottomOf="@+id/id"
-                app:layout_constraintStart_toEndOf="@+id/date_header"
-                app:layout_constraintEnd_toStartOf="@+id/ending_header" />
+                app:layout_constraintStart_toEndOf="@+id/classroom_code_header"
+                app:layout_constraintTop_toBottomOf="@+id/exam_title" />
 
             <TextView
                 android:id="@+id/ending_header"
@@ -109,7 +83,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/spinner_header"
                 app:layout_constraintHorizontal_weight="15"
                 app:layout_constraintStart_toEndOf="@+id/beginning_header"
-                app:layout_constraintTop_toBottomOf="@+id/id" />
+                app:layout_constraintTop_toBottomOf="@+id/exam_title" />
 
             <TextView
                 android:id="@+id/spinner_header"
@@ -123,7 +97,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_weight="35"
                 app:layout_constraintStart_toEndOf="@+id/ending_header"
-                app:layout_constraintTop_toBottomOf="@+id/id" />
+                app:layout_constraintTop_toBottomOf="@+id/exam_title" />
 
 
             <TextView
@@ -135,25 +109,11 @@
                 android:layout_marginEnd="8dp"
                 android:text="@string/classroom_code_header"
                 android:textSize="13sp"
-                app:layout_constraintEnd_toStartOf="@+id/date"
-                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintEnd_toStartOf="@+id/beginning"
                 app:layout_constraintHorizontal_weight="10"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />
 
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="@string/date"
-                android:textSize="13sp"
-                app:layout_constraintEnd_toStartOf="@+id/beginning"
-                app:layout_constraintHorizontal_weight="25"
-                app:layout_constraintStart_toEndOf="@+id/classroom_code"
-                app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />
 
             <TextView
                 android:id="@+id/beginning"
@@ -162,11 +122,11 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="@string/beginning_header"
+                android:text="@string/beginning"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/ending"
                 app:layout_constraintHorizontal_weight="15"
-                app:layout_constraintStart_toEndOf="@+id/date"
+                app:layout_constraintStart_toEndOf="@+id/classroom_code"
                 app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />
 
             <TextView
