--- a/app/src/main/res/layout/my_exams_item_layout2.xml
+++ b/app/src/main/res/layout/my_exams_item_layout2.xml
@@ -92,7 +92,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:text="@string/date"
+                android:text="@string/date_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/beginning_header"
                 app:layout_constraintHorizontal_weight="25"
