--- a/app/src/main/res/menu/activity_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer.xml
@@ -21,6 +21,10 @@
             android:icon="@drawable/ic_menu_my_exams"
             android:title="@string/nav_my_exams" />
         <item
+            android:id="@+id/nav_student_record"
+            android:icon="@drawable/ic_student_record"
+            android:title="@string/nav_student_record" />
+        <item
             android:id="@+id/nav_log_out"
             android:icon="@drawable/ic_log_out"
             android:title="@string/nav_log_out" />
