--- a/app/src/main/res/layout/time_slots_item_layout.xml
+++ b/app/src/main/res/layout/time_slots_item_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/time_slots_parent_layout"
     android:layout_width="match_parent"
@@ -89,4 +89,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_weight="13"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
