--- a/app/src/main/res/layout/student_record_item_layout.xml
+++ b/app/src/main/res/layout/student_record_item_layout.xml
@@ -40,7 +40,7 @@
 
             <TextView
                 android:id="@+id/name"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
