--- a/app/src/main/res/layout/content_certificate.xml
+++ b/app/src/main/res/layout/content_certificate.xml
@@ -75,6 +75,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/authority"
+        app:layout_constraintVertical_bias="0.0"
         tools:targetApi="m" />
 
 
